# ros2-robot-motion-plan

./: .gitignore  README.md
src/: README.md
src/bring_up/: package.xml  setup.py
src/bring_up/launch/: bringup.launch.py
src/convert_pcd2_available_map/: CMakeLists.txt  package.xml
src/convert_pcd2_available_map/launch/: convert_pcd2_gridmap.launch.py  convert_pcd2_octomap.launch.py  display_urdf.launch.py  robot_gridmap.launch.py
src/convert_pcd2_available_map/pcd/: map.pcd  rotate_ground.pcd
src/convert_pcd2_available_map/rviz/: show.rviz
src/convert_pcd2_available_map/src/: combine_pointcloud_lidar.cpp  dummy_robot.cpp  pcd_to_pointcloud_node.cpp  pointcloud_to_gridmap.cpp  pointcloud_to_octomap.cpp
src/convert_pcd_gridmap/: CMakeLists.txt  package.xml
src/convert_pcd_gridmap/launch/: convert_pcd_gridmap.launch.py  convert_pcd_octomap.launch.py  display_urdf.launch.py  robot_gridmap.launch.py
src/convert_pcd_gridmap/pcd/: merged.pcd  merged_Edit.pcd  merged_ground.pcd
src/convert_pcd_gridmap/rviz/: show.rviz
src/convert_pcd_gridmap/src/: dummy_robot.cpp  pointcloud_to_gridmap.cpp  pointcloud_to_octomap.cpp
src/custom_motion_plan_msgs/: CMakeLists.txt  package.xml
src/custom_motion_plan_msgs/action/: SendGoal.action
src/custom_motion_plan_msgs/msg/: RobotInfo.msg  TrajectoryPoint.msg
src/custom_trajectory_msgs/: CMakeLists.txt  package.xml
src/custom_trajectory_msgs/msg/: RobotTrajectory.msg  TrajectoryPoint.msg
src/global_path_planner/: package.xml  setup.cfg  setup.py
src/global_path_planner/config/: global_path_planner.yaml
src/global_path_planner/global_path_planner/: global_planner_node.py  send_goal_client.py
src/global_path_planner/launch/: global_planner.launch.py  planner.launch.py
src/local_path_planner/: package.xml  setup.py
src/local_path_planner/config/: local_planner.yaml
src/local_path_planner/launch/: local_planner.launch.py  new_local_planner.launch.py
src/local_path_planner/local_path_planner/: fake_lidar_points_pub.py  local_gridmap_node.py  local_planner_node.py  new_local_planner.py
src/nav_25d/: CMakeLists.txt  README.md  nav2_plugins.xml  package.xml
src/nav_25d/config/: rtabmap_params.yaml
src/nav_25d/include/nav_25d/: gradient_layer.hpp
src/nav_25d/launch/: mapping_25d.launch.py  navigation_25d.launch.py  rtabmap.launch.py  simulation.launch.py
src/nav_25d/params/: nav2_params.yaml
src/nav_25d/rviz/: nav_25d.rviz
src/nav_25d/src/: gradient_layer.cpp  odom_tf_broadcaster.cpp
src/odom_tf_broadcaster/: CMakeLists.txt  package.xml
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: controllers.yaml
src/robot_description/launch/: gazebo.launch.py
src/robot_description/meshes/: DaBi.STL  cabin.dae  uneven_terrain.dae  zhongbi.STL
src/robot_description/urdf/: rover.urdf.xacro  whc_description_gazebo.xacro
src/robot_description/worlds/: cabin.world  outdoor.world  room.world  uneven_terrain.world
src/track_can_control/: CMakeLists.txt  package.xml
src/track_can_control/include/track_can_control/: CanController.hpp
src/track_can_control/src/: CanController.cpp  remote_to_cmd_vel.cpp
src/track_vel_can_pub/: CMakeLists.txt  package.xml
src/track_vel_can_pub/launch/: track_vel_can.launch.py
src/track_vel_can_pub/src/: cmd_pub.cpp  track_vel_can_send.cpp
src/track_velocity_pub/: package.xml  setup.cfg  setup.py
src/track_velocity_pub/config/: track_vel_pub.yaml
src/track_velocity_pub/launch/: track_vel_pub.launch.py
src/track_velocity_pub/track_velocity_pub/: fake_cmd_pub.py  track_velocity_pub.py
src/trajectory_planner/: CMakeLists.txt  package.xml
src/trajectory_planner/include/trajectory_planner/: cubic_spline.hpp
src/trajectory_planner/src/: trajectory_planner.cpp
src/traversability_analysis/: package.xml  setup.cfg  setup.py
src/traversability_analysis/traversability_analysis/: traversability_node.py
src/whc_description/: CMakeLists.txt  package.xml
src/whc_description/launch/: display_urdf.launch.py  display_xacro.launch.py
src/whc_description/meshes/: PingTai.STL  R1.STL  R2.STL  candou.STL  xiaobi.STL
src/whc_description/rviz/: whc_ctrl.rviz
src/whc_description/urdf/: friction_ground.world  slope_terrain.urdf  whc_description.urdf  whc_description.xacro  whc_description_gazebo.xacro
