<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bring_up</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2996934032@qq.com">yangyang</maintainer>
  <license>TODO: License declaration</license>

  <depend>convert_pcd2_available_map</depend>
  <depend>custom_motion_plan_msgs</depend>
  <depend>global_path_planner</depend>
  <depend>local_path_planner</depend>
  <depend>track_velocity_pub</depend>
  <depend>trajectory_planner</depend>
  <depend>whc_description</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
